--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,9 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.is-complete{
+
+  text-decoration: line-through;
+  
+}
